# Progetto_Malnati

./: .gitignore  README.md  docker-compose.yml
Prova/: .hash.db
client/: CMakeLists.txt  Dockerfile  Doxyfile  client.srctrldb  client.srctrlprj  todoc.txt
client/config_file/: config.json  connection.json  credential.json  folder.json
client/doc/html/: annotated.html  authentication_8h_source.html  classAuthentication-members.html  classAuthentication.html  classClient-members.html  classClient.html  classConfig-members.html  classConfig.html  classControlMessage-members.html  classControlMessage.html  classDatabaseConnection-members.html  classDatabaseConnection.html  classFileSipper-members.html  classFileSipper.html  classPatch-members.html  classPatch.html  classSender-members.html  classSender.html  classSharedQueue-members.html  classSharedQueue.html  classSyncTCPSocket-members.html  classSyncTCPSocket.html  classSyntaxError-members.html  classSyntaxError.html  classTreeT-members.html  classTreeT.html  classWatcher-members.html  classWatcher.html  classes.html  client_8h_source.html  config_8h_source.html  control__message_8h_source.html  database_8h_source.html  dir_0736cb1ab42c0dc650976bcbb6c96861.html  dir_09a449c7db21726996782a174c1b42c0.html  dir_09e761304027c904456130627fd4dcf5.html  dir_59d128fb766534d0ff9e97832ccaaa5c.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6908ff505388a07996d238c763adbdab.html  dir_73874bc7c4514872b370a71d1c538bc0.html  (+28 more)
client/doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  annotated.html  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+23 more)
client/doc/latex/: annotated.tex  classAuthentication.tex  classClient.tex  classConfig.tex  classControlMessage.tex  classDatabaseConnection.tex  classFileSipper.tex  classPatch.tex  classSender.tex  classSharedQueue.tex  classSyncTCPSocket.tex  classSyntaxError.eps  classSyntaxError.tex  classTreeT.tex  classWatcher.tex  hierarchy.tex  refman.tex  structCredential.tex  structRawEndpoint.tex
client/include/utilities/: ut.h
client/includes/client/: client.h  file_sipper.h  sender.h  shared_queue.h
client/includes/config/: authentication.h  config.h
client/includes/connect_server/: connect_server.h
client/includes/connecttoserver/: connectToServer.h
client/includes/database/: database.h
client/includes/sync_tcp_socket/: sync_tcp_socket.h
client/includes/transfer/: control_message.h  patch.cpp  patch.h  transfer.h  tree_h.cpp  tree_h.h  tree_t.h
client/includes/utilities/: utilities.h
client/includes/watcher/: watcher.h
client/libs/SQLiteCpp/: CHANGELOG.md  CMakeLists.txt  README.md  TODO.txt
client/libs/SQLiteCpp/docs/: README.md
client/libs/cryptopp/include/: iterhash.h  misc.h  secblock.h
client/libs/panoptes/: Makefile  cmake_install.cmake
client/libs/panoptes/console/: Makefile  PanoptesConsole  cmake_install.cmake  main.cpp
client/libs/panoptes/src/: Makefile  cmake_install.cmake
client/src/: main.cpp
client/src/client/: client.cpp  file_sipper.cpp  sender.cpp  shared_queue.cpp
client/src/config/: authentication.cpp  config.cpp
client/src/connect_server/: connect_server.cpp
client/src/connecttoserver/: connectToServer.cpp
client/src/database/: database.cpp
client/src/sync_tcp_socket/: sync_tcp_socket.cpp
client/src/transfer/: control_message.cpp  patch.cpp  tree_t.cpp
client/src/utilities/: utilities.cpp
client/src/watcher/: watcher.cpp
client/test/: CMakeLists.txt  catch.hpp  main_test.cpp
server/: CMakeLists.txt  Dockerfile  Doxyfile
server/backupROOT/: authDB.db
server/backupROOT/usersTREE/: federica_2.db  federico_3.db
server/config/: ConfigClass.cpp  ConfigClass.h  config.cpp  config.h  credential.json
server/doc/html/: accept__client_8h_source.html  annotated.html  async__accept__client_8h_source.html  async__server_8h_source.html  async__service_8h_source.html  classAcceptClient-members.html  classAcceptClient.html  classAsyncAcceptClient-members.html  classAsyncAcceptClient.html  classAsyncServer-members.html  classAsyncServer.html  classAsyncService-members.html  classAsyncService.html  classControlMessage-members.html  classControlMessage.html  classDatabase-members.html  classDatabase.html  classServer-members.html  classServer.html  classService-members.html  classService.html  classTreeT-members.html  classTreeT.html  classes.html  control__message_8h_source.html  database_8h_source.html  dir_08792056cffde596efc34401af82a377.html  dir_09e761304027c904456130627fd4dcf5.html  dir_336e37547307940435d0b1c21e97b263.html  dir_59d128fb766534d0ff9e97832ccaaa5c.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_803ee67260c130b45d29089798491ab2.html  dir_85573641a7bad78e3e63f2bdf9f41574.html  dir_aa14ba9e9db3fa9c3fa2dc807e371fbf.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  menudata.js  (+3 more)
server/doc/latex/: annotated.tex  classAcceptClient.tex  classAsyncAcceptClient.tex  classAsyncServer.tex  classAsyncService.tex  classControlMessage.tex  classDatabase.tex  classServer.tex  classService.tex  classTreeT.tex  refman.tex
server/includes/accept_client/: accept_client.h  async_accept_client.h  async_server.h  async_service.h  authentication.h  server.h  service.h
server/includes/database/: database.h
server/includes/transfer/: control_message.h  tree_t.h
server/src/: main.cpp
server/src/accept_client/: accept_client.cpp  accept_client.cpp~  async_accept_client.cpp  async_server.cpp  async_service.cpp  authentication.cpp  server.cpp  service.cpp
server/src/database/: database.cpp
server/src/transfer/: control_message.cpp  tree_t.cpp
server/src/utilities/: ut.cpp  ut.h
(+41 files in other folders)
